got rid of the spacing in details page line 44 and in css i fixed the theme button to be inline with the title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,8 +163,11 @@ header {
 /* theme button */
 .btn-mode {
   display: flex;
-  align-items: flex-end;
+  flex-direction: row;
+  align-items: center;
   justify-content: flex-end;
+  margin-top: -3em;
+  flex-wrap: wrap;
 }
 
 #toggle-mode {
@@ -193,6 +196,7 @@ img {
   max-width: 30%;
   margin: 3px;
 }
+
 /* editing margin */
 
 #recipe-cards-container .card:hover {
@@ -223,7 +227,8 @@ img {
 
 .video-container {
   position: relative;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  padding-bottom: 56.25%;
+  /* 16:9 aspect ratio */
   height: 0;
   overflow: hidden;
 }
@@ -241,4 +246,3 @@ img {
   font-size: 0.9rem;
   color: #666;
 }
-
